UI issue when Opportunity Name is too long

--- a/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
+++ b/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     text-transform: uppercase;
     font-family: $font-barlow-condensed;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: $font-weight-medium;
     margin-top: $sp-2;
     padding: $sp-6 0;
